# AI-Automated-Github-Test

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py  index.js
tests/: smoke.test.js  test_smoke.py
